--- a/src/Panama/View/Main/SubmissionView.xaml
+++ b/src/Panama/View/Main/SubmissionView.xaml
@@ -2,56 +2,47 @@
     x:Class="Restless.Panama.View.SubmissionView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:cv="clr-namespace:Restless.Panama.Core"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
+    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
+    xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:view="clr-namespace:Restless.Panama.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel"
+    d:DataContext="{d:DesignInstance Type=vm:SubmissionViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="400">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <!-- MaxWidth binds to a value relative to the width of the grid. Converter parm is the desired min width of right column -->
-            <ColumnDefinition Width="{Binding Config.LeftColumnSubmission,Mode=TwoWay}" MinWidth="360" MaxWidth="{Binding Path=ActualWidth, RelativeSource={RelativeSource AncestorType=Grid}, Converter={cv:SubtractionConverter}, ConverterParameter=380}" />
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="{StaticResource GridRowHeightTool}" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <!-- Controls specific to this view (no commands) -->
-        <!--<ItemsControl Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>-->
-        <StackPanel Orientation="Horizontal">
-            <view:SimpleRowFilter />
-            <TextBlock Style="{StaticResource TextBlockMessage}" Text="{Binding SourceCount}"/>
-            <TextBlock Style="{StaticResource TextBlockMessage}" Text="records"/>
-        </StackPanel>
+    <con:SplitterGrid
+        MinDetailWidth="{x:Static core:Config+Grid.MinSubmissionDetailWidth}"
+        MaxDetailWidth="{x:Static core:Config+Grid.MaxSubmissionDetailWidth}"
+        IsDetailExpanded="{Binding Config.SubmissionDetailExpanded}"
+        DetailWidth="{Binding Config.SubmissionDetailWidth}">
+
+        <con:SplitterGrid.HeaderLeft>
+            <StatusBar/>
+        </con:SplitterGrid.HeaderLeft>
+
+        <con:SplitterGrid.HeaderRight>
+            <StatusBar/>
+        </con:SplitterGrid.HeaderRight>
 
         <!-- Main data grid to display the tabular data -->
-        <Border Grid.Row="1" Grid.Column="0" Style="{StaticResource BorderEditContainerStyle}">
-            <tk:DataGrid 
-                x:Name="grid"
+        <con:SplitterGrid.ContentLeft>
+            <DataGrid 
                 RowHeight="{Binding Config.DataGridRowHeight}"
-                ItemsSource="{Binding Path=MainSource.View}"
+                ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
                 tk:DataGridColumns.Columns="{Binding Columns}">
                 <DataGrid.ContextMenu>
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
-            </tk:DataGrid>
-        </Border>
+            </DataGrid>
+        </con:SplitterGrid.ContentLeft>
 
-        <!-- Splitter -->
-        <GridSplitter Grid.Row="1" Grid.Column="1" Style="{StaticResource GridSplitterVertical}" />
+        <con:SplitterGrid.ContentRight>
+            <TextBlock Text="OK"/>
+        </con:SplitterGrid.ContentRight>
 
-        <ItemsControl Grid.Column="2" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=FilterCommands}"/>
+    </con:SplitterGrid>
 
-        <!-- Nested editing control on the right -->
-        <Border Grid.Row="1" Grid.Column="2" Style="{StaticResource BorderEditContainerStyle}">
-            <view:SubmissionEditWithTab Visibility="{Binding EditVisibility}"/>
-        </Border>
-
-    </Grid>
-    <!-- end main grid-->
 </UserControl>
