--- a/src/Panama/View/Windows/PublisherSelectWindow.xaml
+++ b/src/Panama/View/Windows/PublisherSelectWindow.xaml
@@ -1,29 +1,41 @@
-﻿<Window 
+﻿<tk:AppWindow 
     x:Class="Restless.Panama.View.PublisherSelectWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:view="clr-namespace:Restless.Panama.View"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    Height="460" Width="520" ShowInTaskbar="False" ResizeMode="NoResize"
-    WindowStartupLocation="CenterOwner">
+    xmlns:r="clr-namespace:Restless.Panama.Resources"
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" 
+    d:DataContext="{d:DesignInstance Type=vm:PublisherSelectWindowViewModel}"
+    mc:Ignorable="d"
+    ResizeMode="NoResize"
+    Title="{x:Static r:Strings.WindowTitleSelectPublisherGeneric}"
+    Style="{StaticResource DefaultAppWindowStyle}"
+    Height="680" Width="568">
     
-    <Grid Margin="0,8">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="112"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="{StaticResource GridRowHeightTool}" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <view:SimpleRowFilter Grid.Row="0"/>
-        <Button Grid.Column="1" Grid.Row="0" Margin="5" Command="{Binding Commands[Select]}">Select</Button>
+    <Grid 
+        Margin="{StaticResource DefaultPadding}"
+        tk:Property.RowHeights="Auto,*">
 
-        <!-- Main data grid to display the tabular data  -->
+        <StatusBar>
+            <TextBlock Text="{x:Static r:Strings.TextPublisher}"/>
+            <TextBox
+                Width="100"
+                Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged, Delay=500}"/>
+            <Separator/>
+            <tk:IconButton
+                Icon="{StaticResource SquareSmallBlueIconKey}"
+                Content="Select"
+                Command="{Binding Commands[Select]}"/>
+        </StatusBar>
+
         <tk:DataGrid
-            Grid.Row="1" Grid.ColumnSpan="2" 
-            ItemsSource="{Binding Path=MainSource.View}"
+            Grid.Row="1"
+            Margin="0,5"
+            RowHeight="{Binding Config.DataGridRowHeight}"
+            ItemsSource="{Binding ListView}"
             SelectedItem="{Binding SelectedItem}"
             tk:DataGridColumns.Columns="{Binding Columns}"/>
     </Grid>
-</Window>
+</tk:AppWindow>
