--- a/src/Panama/View/Title/TitleSelectWindow.xaml
+++ b/src/Panama/View/Title/TitleSelectWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<tk:AppWindow 
-    x:Class="Restless.Panama.View.PublisherSelectWindow"
+    x:Class="Restless.Panama.View.TitleSelectWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,10 +7,10 @@
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" 
-    d:DataContext="{d:DesignInstance Type=vm:PublisherSelectWindowViewModel}"
+    d:DataContext="{d:DesignInstance Type=vm:TitleSelectWindowViewModel}"
     mc:Ignorable="d"
     ResizeMode="NoResize"
-    Title="{x:Static r:Strings.WindowTitleSelectPublisherGeneric}"
+    Title="{x:Static r:Strings.WindowTitleSelectTitlesGeneric}"
     Style="{StaticResource DefaultAppWindowStyle}"
     Height="680" Width="568">
     
@@ -19,22 +19,35 @@
         tk:Property.RowHeights="Auto,*">
 
         <StatusBar>
-            <TextBlock Text="{x:Static r:Strings.TextPublisher}"/>
+            <TextBlock Text="{x:Static r:Strings.TextTitle}"/>
             <TextBox
                 Width="100"
                 Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged, Delay=500}"/>
+            
             <Separator/>
+
+            <TextBlock>
+                <Run
+                    Foreground="{StaticResource DarkAlertForegroundBrush}"
+                    Text="{Binding SelectedCount, Mode=OneWay}"/>
+                <Run Text="titles(s) selected"/>
+            </TextBlock>
+            
+            <Separator/>
+            
             <tk:IconButton
                 Icon="{StaticResource SquareSmallBlueIconKey}"
-                Content="Select"
+                Content="Done"
                 Command="{Binding Commands[Select]}"/>
         </StatusBar>
 
-        <DataGrid
+        <tk:DataGrid
             Grid.Row="1"
             Margin="0,5"
+            SelectionMode="Extended"
             RowHeight="{Binding Config.DataGridRowHeight}"
             ItemsSource="{Binding ListView}"
+            SelectedItemsList="{Binding SelectedDataGridItems, Mode=OneWayToSource}"
             SelectedItem="{Binding SelectedItem}"
             tk:DataGridColumns.Columns="{Binding Columns}"/>
     </Grid>
