Implement simple filters when selecting titles for a submission
When selecting title(s) for a submission, you can filter by ready, quick flag, and the text of the title

--- a/src/Panama/View/Title/TitleSelectWindow.xaml
+++ b/src/Panama/View/Title/TitleSelectWindow.xaml
@@ -24,6 +24,14 @@
                 Width="100"
                 Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged, Delay=500}"/>
             
+            <CheckBox
+                IsChecked="{Binding IsReady}"
+                Content="Ready"/>
+            
+            <CheckBox
+                IsChecked="{Binding IsFlagged}"
+                Content="Flagged"/>
+            
             <Separator/>
 
             <TextBlock>
