Implement submission documents

--- a/src/Panama/Resources/Dictionary/Expander.xaml
+++ b/src/Panama/Resources/Dictionary/Expander.xaml
@@ -62,7 +62,7 @@
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
+                                <RowDefinition/>
                             </Grid.RowDefinitions>
                             <ToggleButton
                                 x:Name="HeaderSite"
