--- a/src/Panama/View/Submission/SubmissionDocumentSelectWindow.xaml
+++ b/src/Panama/View/Submission/SubmissionDocumentSelectWindow.xaml
@@ -1,53 +1,58 @@
-﻿<Window 
+﻿<tk:AppWindow 
     x:Class="Restless.Panama.View.SubmissionDocumentSelectWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Create submission document" Height="212" Width="418" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:tk="http://schemas.restless.toolkit.com/2021"
+    xmlns:r="clr-namespace:Restless.Panama.Resources"    
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel"
+    d:DataContext="{d:DesignInstance Type=vm:SubmissionDocumentSelectWindowViewModel}"
+    mc:Ignorable="d"
+    Style="{StaticResource DefaultAppWindowStyle}"
+    ResizeMode="NoResize"
+    Title="{x:Static r:Strings.TextCreateSubmissionDocument0}" 
+    Height="212" Width="400">
   
-    <DockPanel>
-        <DockPanel.Resources>
-            <Style TargetType="TextBlock">
-                <Setter Property="FontSize" Value="12"/>
-                <Setter Property="Foreground" Value="#FF000066" />
-                <Setter Property="Margin" Value="6,8" />
-            </Style>
-            <Style TargetType="Button">
-                <Setter Property="Height" Value="30"/>
+    <Grid
+        Margin="10,0"
+        Style="{StaticResource DataEntryPanelStyle}"
+        tk:Property.RowHeights="Auto,Auto,*">
+        <Grid.Resources>
+            <Style TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}">
+                <Setter Property="Height" Value="32"/>
+                <Setter Property="MinWidth" Value="150"/>
                 <Setter Property="Margin" Value="6"/>
-                <Setter Property="Foreground" Value="DarkBlue"/>
+                <Setter Property="BorderBrush" Value="{StaticResource DefaultBorderBrush}"/>
+                <Setter Property="Foreground" Value="{StaticResource DefaultForegroundBrush}"/>
             </Style>
-        </DockPanel.Resources>
-        <TextBlock DockPanel.Dock="Top">Getting ready to create a submission document. You may:</TextBlock>
-        <Grid DockPanel.Dock="Top" Margin="12,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="26" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top"  FontWeight="Bold" Text="1." />
-            <TextBlock Grid.Column="1" Grid.Row="0" TextWrapping="Wrap">
-                Create a .docx document compatible with Microsoft Word and other word processors that support the Open XML specification.
-            </TextBlock>
-            <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top"  FontWeight="Bold" Text="2." />
-            <TextBlock Grid.Column="1" Grid.Row="1" TextWrapping="Wrap">
-                Create a placeholder entry in the submission documents. After, you can select an existing file to associate with this entry.
-            </TextBlock>            
-        </Grid>
-        <Grid DockPanel.Dock="Top" VerticalAlignment="Bottom">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Button Grid.Column="0" Command="{Binding Commands[CreateDocx]}">Create .docx</Button>
-            <Button Grid.Column="1" Command="{Binding Commands[CreatePlaceholder]}">Create placeholder</Button>
-            <Button Grid.Column="2" Command="{Binding CloseWindowCommand}">Cancel</Button>
-        </Grid>
-    </DockPanel>
-</Window>
+        </Grid.Resources>
+
+        <TextBlock
+            Text="{x:Static r:Strings.TextCreateSubmissionDocument1}"/>
+
+        <StackPanel
+            Grid.Row="1"
+            Margin="{StaticResource DefaultPadding}">
+            
+            <TextBlock Text="{x:Static r:Strings.TextCreateSubmissionDocument2}"/>
+            <TextBlock Text="{x:Static r:Strings.TextCreateSubmissionDocument3}"/>
+        </StackPanel>
+
+        <StackPanel
+            Grid.Row="2"
+            Orientation="Horizontal"
+            HorizontalAlignment="Center">
+
+            <Button
+                Content="{x:Static r:Strings.TextCreateSubmissionDocument4}"
+                Command="{Binding Commands[CreateDocX]}"/>
+            
+            <Button
+                Content="{x:Static r:Strings.TextCreateSubmissionDocument5}"
+                Command="{Binding Commands[CreatePlaceholder]}"/>
+            
+        </StackPanel>
+
+    </Grid>
+</tk:AppWindow>
