--- a/src/Panama/Resources/Dictionary/HeaderedContentControl.xaml
+++ b/src/Panama/Resources/Dictionary/HeaderedContentControl.xaml
@@ -16,7 +16,7 @@
     <Style x:Key="DefaultHeaderedContentControlStyle" TargetType="HeaderedContentControl">
         <Setter Property="BorderBrush" Value="{StaticResource DefaultBorderBrush}"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Padding" Value="{StaticResource DefaultPadding}"/>
+        <Setter Property="Padding" Value="{StaticResource TightPadding}"/>
         <Setter Property="IsTabStop" Value="False"/>
         
         <Setter Property="Template">
