Implement IList of selected items
DataViewModel implements IList of selected items that enable a consumer to bind to multiple selections. Code cleanup

--- a/src/Panama/View/Title/TitleSelectWindow.xaml
+++ b/src/Panama/View/Title/TitleSelectWindow.xaml
@@ -55,7 +55,7 @@
             SelectionMode="Extended"
             RowHeight="{Binding Config.DataGridRowHeight}"
             ItemsSource="{Binding ListView}"
-            SelectedItemsList="{Binding SelectedDataGridItems, Mode=OneWayToSource}"
+            SelectedItemsList="{Binding SelectedItems, Mode=OneWayToSource}"
             SelectedItem="{Binding SelectedItem}"
             tk:DataGridColumns.Columns="{Binding Columns}"/>
     </Grid>
