--- a/src/Panama/Resources/Dictionary/Button.xaml
+++ b/src/Panama/Resources/Dictionary/Button.xaml
@@ -41,6 +41,14 @@
 
     <Style TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}"/>
 
+    <Style x:Key="BorderedButtonStyle" TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}">
+        <Setter Property="Height" Value="32"/>
+        <Setter Property="MinWidth" Value="90"/>
+        <Setter Property="Margin" Value="6"/>
+        <Setter Property="BorderBrush" Value="{StaticResource DefaultBorderBrush}"/>
+        <Setter Property="Foreground" Value="{StaticResource DefaultForegroundBrush}"/>
+    </Style>
+
     <!-- Style for a tool bar style button. -->
     <!--<Style TargetType="Button" x:Key="ToolBarButton" BasedOn="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
         <Setter Property="Focusable" Value="False" />
