--- a/src/Panama/Resources/Dictionary/Control.xaml
+++ b/src/Panama/Resources/Dictionary/Control.xaml
@@ -18,8 +18,8 @@
         <Setter Property="Foreground" Value="{StaticResource TextBoxForegroundBrush}"/>
         <Style.Triggers>
             <Trigger Property="IsReadOnly" Value="True">
-                <Setter Property="Background" Value="{StaticResource DisabledBackgroundBrush}"/>
-                <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}" />
+                <Setter Property="Opacity" Value="0.85"/>
+                <Setter Property="BorderBrush" Value="{StaticResource LightBorderBrush}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
